# MandelbrotCPP

./: CMakeLists.txt  README.md  mandelcpp.cpp
classes/: ComplexNumber.cpp  ComplexNumber.h  Dimension.cpp  Dimension.h  MyFractalArea.cpp  MyFractalArea.h  Palette.cpp  Palette.h  PaletteHSL.cpp  PaletteHSL.h  PaletteRGB.cpp  PaletteRGB.h  RGBColor.cpp  RGBColor.h  Rectangle.cpp  Rectangle.h
